# nyiso-solar-residual

./: .gitattributes  Makefile  README.md  pyproject.toml
data/processed/: 02_era5_weather.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 00_data_acquisition.ipynb  01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_models.ipynb  03_model_training.ipynb  04_advanced_models.ipynb  04_model_evaluation.ipynb  05_hyperparameter_tuning.ipynb  06_error_analysis.ipynb  06_model_evaluation.ipynb  07_model_results.ipynb
solar_forecast/: __init__.py  config.py  dataset.py  features.py  plots.py
solar_forecast/modeling/: predict.py  train.py
